--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github_username:  reinaldorauch
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-chirpy
 plugins:
   - jekyll-feed
 
