Updated config to work with hacker theme

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github_username:  reinaldorauch
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-chirpy
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
