Fixed code highlight

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,9 @@ google_analytics: G-T6PH1ZZFQM
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
